# INF2032_LANGGRAPH

./: README.md  pyproject.toml  setup_environtment.sh
notebooks/: basic_chatbot.ipynb  basic_chatbot_1.ipynb  basic_chatbot_2_add_web_search.ipynb  basic_chatbot_3_add_memory.ipynb  basic_chatbot_4_add_human_in_the_loop_controls.ipynb  basic_chatbot_5.1_customize_state_fixed.ipynb  basic_chatbot_5_customize_state.ipynb  basic_chatbot_6_time_travel.ipynb
second_tutorial_prompt_generation/: prompt_generation_from_user_requirements.ipynb
