[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "A tutorial project for LangGraph and LangSmith using Conda."
authors = [
    { name = "Vicente Neto", email = "vic.cs.neto@gmail.com" }
]
requires-python = ">=3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langgraph = "*"
langsmith = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
